# APIC-Vibe-Portal

./: .dockerignore  .editorconfig  .env.example  .gitignore  .trivyignore  README.md  SECURITY.md  eslint.config.js  eslint.config.mjs  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labeler.yml
.github/agents/: api-portal-architect.agent.md  api-portal-architect.md  azure-infra-agent.agent.md  azure-infra-agent.md  bff-agent.agent.md  bff-agent.md  frontend-agent.agent.md  frontend-agent.md  tech-writer-agent.agent.md  tech-writer-agent.md
docs/: CI_CD_SETUP.md  ENTRA-SETUP.md  LOAD-TESTING.md  MIGRATION-RUNTIME-CONFIG.md  RBAC-SETUP.md  RUNTIME-CONFIG.md  authentication-setup.md
infra/: .gitignore  README.md  main.bicep  main.json
load-tests/: README.md
scripts/: deploy-container-apps.sh  index_stats.py  peek_dlq.py  reindex.py
src/analytics-processor/: Dockerfile  function_app.py  host.json  pyproject.toml
src/analytics-processor/tests/: test_process_events.py
src/apic_client/: pyproject.toml
src/apic_client/apic_client/: __init__.py  client.py  exceptions.py
src/apic_client/tests/: test_client.py
src/backup-job/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
src/backup-job/apic_backup/: __init__.py  config.py  telemetry.py
src/backup-job/apic_backup/clients/: __init__.py  storage_client.py
src/backup-job/apic_backup/models/: __init__.py  backup_manifest.py  backup_metadata.py
src/backup-job/apic_backup/services/: __init__.py  backup_service.py  metadata_service.py  retention_service.py
src/backup-job/tests/: __init__.py  conftest.py  test_backup_service.py  test_metadata_service.py  test_retention_service.py  test_storage_client.py
src/bff/: .env.example  Dockerfile  pyproject.toml
src/bff/apic_vibe_portal_bff/: __init__.py  app.py  main.py
src/bff/apic_vibe_portal_bff/agents/: __init__.py  agent_registry.py  agent_router.py  base_agent.py  chat_history_provider.py  context_manager.py  intent_classifier.py  orchestrator.py  types.py
src/bff/apic_vibe_portal_bff/agents/api_discovery_agent/: __init__.py  definition.py  handler.py  prompts.py
src/bff/apic_vibe_portal_bff/agents/governance_agent/: __init__.py  definition.py  handler.py  prompts.py
src/bff/apic_vibe_portal_bff/agents/governance_agent/rules/: __init__.py  compliance_checker.py  governance_rules.py
src/bff/apic_vibe_portal_bff/agents/prompts/: __init__.py  api_discovery_system.md  governance_system.md
src/bff/apic_vibe_portal_bff/clients/: __init__.py  ai_search_client.py  api_center_client.py  api_center_mapper.py  foundry_agent_client.py  mcp_client.py  openai_client.py  redis_cache_client.py
src/bff/apic_vibe_portal_bff/config/: __init__.py  settings.py
src/bff/apic_vibe_portal_bff/data/: __init__.py  cosmos_client.py  retention.py
src/bff/apic_vibe_portal_bff/data/migrations/: __init__.py  lazy_migration.py
src/bff/apic_vibe_portal_bff/data/models/: __init__.py  analytics.py  api_access_policy.py  chat_session.py  governance.py
src/bff/apic_vibe_portal_bff/data/repositories/: __init__.py  analytics_repository.py  api_access_policy_repository.py  base_repository.py  chat_session_repository.py  governance_repository.py
src/bff/apic_vibe_portal_bff/jobs/: data_retention_job.py
src/bff/apic_vibe_portal_bff/middleware/: __init__.py  auth.py  bot_detection.py  compression.py  error_handler.py  input_validation.py  rate_limit.py  rbac.py  request_logger.py  security_trimming.py
src/bff/apic_vibe_portal_bff/models/: __init__.py  api_center.py  chat.py  mcp.py  search.py
src/bff/apic_vibe_portal_bff/routers/: __init__.py  admin_access_policies.py  admin_agents.py  analytics.py  api_catalog.py  api_compare.py  backup.py  chat.py  governance.py  health.py  mcp_inspector.py  metadata.py  search.py
src/bff/apic_vibe_portal_bff/services/: __init__.py  ai_chat_service.py  analytics_service.py  api_catalog_service.py  api_compare_service.py  backup_service.py  governance_dashboard_service.py  metadata_completeness_service.py  metadata_recommendations_service.py  search_service.py  user_context_service.py
src/bff/apic_vibe_portal_bff/telemetry/: __init__.py  metrics.py  middleware.py  otel_setup.py  token_metrics.py
src/bff/apic_vibe_portal_bff/utils/: __init__.py  cache.py  logger.py
src/bff/tests/: api_center_mocks.py  conftest.py  test_agent_router.py  test_ai_chat_service.py  test_ai_search_client.py  test_analytics_router.py  test_analytics_service.py  test_api_catalog_routes.py  test_api_catalog_service.py  test_api_center_client.py  test_api_center_mapper.py  test_api_compare_routes.py  test_api_compare_service.py  test_api_discovery_agent.py  test_backup_routes.py  test_cache.py  test_chat_history_provider.py  test_chat_routes.py  test_compliance_checker.py  test_config.py  test_context_manager.py  test_data_models.py  test_data_retention_job.py  test_foundry_agent_client.py  test_governance_agent.py  test_governance_dashboard_service.py  test_governance_router.py  test_governance_rules.py  test_health.py  test_intent_classifier.py  test_lazy_migration.py  test_logger.py  test_mcp_inspector_routes.py  test_metadata_completeness_service.py  test_metadata_recommendations_service.py  test_metadata_router.py  test_middleware_stack.py  test_openai_client.py  test_orchestrator.py  test_placeholder.py  (+8 more)
src/bff/tests/middleware/: __init__.py  test_auth.py  test_bot_detection.py  test_input_validation.py  test_rate_limit.py  test_rbac.py
src/governance-worker/: .env.example  Dockerfile  main.py  pyproject.toml
src/governance-worker/governance_worker/: __init__.py  config.py  rules.py  scanner.py  telemetry.py
src/governance-worker/tests/: __init__.py  test_rules.py  test_scanner.py
src/indexer/: .env.example  Dockerfile  main.py  pyproject.toml
src/indexer/indexer/: config.py  embedding_service.py  index_schema.py  indexer_service.py  telemetry.py
src/indexer/tests/: test_embedding_service.py  test_index_schema.py  test_indexer_service.py
(+466 files in other folders)
