[project]
name = "apic-vibe-portal-analytics-processor"
version = "0.0.0"
description = "Azure Function App — Service Bus to Cosmos DB analytics event processor"
requires-python = ">=3.13"
dependencies = [
    "azure-functions>=1.21.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["analytics_processor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::SyntaxWarning",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
