[project]
name = "apic-client"
version = "0.1.0"
description = "Azure API Center data-plane REST client shared by BFF and indexer"
requires-python = ">=3.14"
dependencies = [
    "azure-identity>=1.21.0",
    "httpx>=0.28.1",
    "structlog>=25.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "respx>=0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apic_client"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
