[project]
name = "apic-vibe-portal-bff"
version = "0.0.0"
description = "Backend-for-Frontend API for APIC Vibe Portal"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
