[project]
name = "apic-vibe-portal-bff"
version = "0.0.0"
description = "Backend-for-Frontend API for APIC Vibe Portal"
requires-python = ">=3.14"
dependencies = [
    "agent-framework-core>=1.0.1",
    "agent-framework-openai>=1.0.1",
    "aiohttp>=3.13.3",
    "apic-client",
    "azure-cosmos>=4.9.0",
    "azure-identity>=1.21.0",
    "azure-search-documents>=11.6.0",
    "azure-servicebus>=7.13.0",
    "cryptography>=46.0.7",
    "fastapi>=0.135.3",
    "openai>=2.32.0",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "redis>=5.2.0",
    "redis-entraid>=1.1.0",
    "starlette>=0.46.0",
    "structlog>=25.5.0",
    "tiktoken>=0.12.0",
    "uvicorn>=0.44.0",
    "azure-monitor-opentelemetry>=1.6.4",
    "opentelemetry-api>=1.27.0",
]

[tool.uv.sources]
apic-client = { path = "../apic_client", editable = true }

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "pytest>=8.0.0",
    "httpx>=0.28.0",
    "pytest-asyncio>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
